--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <div class="text">
 	<p><b>Pre-prints:</b></p>
   <ul>
+  	<li><a href="https://eprint.iacr.org/2023/1949.pdf" target="_blank">HELIOPOLIS: Verifiable Computation over Homomorphically Encrypted Data from Interactive Oracle Proofs is Practical</a> - Diego F. Aranha, Anamaria Costache, Antonio Guimar&atilde;es and Eduardo Soria-Vazquez</li>
 	<li><a href="https://eprint.iacr.org/2022/1408.pdf" target="_blank">BRAKE: Biometric Resilient Authenticated Key Exchange</a> - Pia Bauspieß, Tjerand Silde, Alexandre Tullot, Anamaria Costache, Christian Rathgeb, Jascha Kolberg and Christoph Busch</li>
     <li><a href="https://eprint.iacr.org/2017/163.pdf" target="_blank">Homomorphic Encryption without Gaussian Noise
 </a> - Anamaria Costache and Nigel P. Smart</li>
@@ -79,7 +80,7 @@
 
 
 <div class="text">
-	<p><b>Community Service: </b>I have served as a program committee member for MathCrypt 2019 and 2021, Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography (WAHC) 2020 and 2021, the Fifteenth Algorithmic Number Theory Symposium (ANTS-XV) (2022), FHE.org 2023, ACM CCS 2022 and 2023.</p>
+	<p><b>Community Service: </b>I have served as a program committee member for MathCrypt 2019 and 2021, Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography (WAHC) 2020 and 2021, the Fifteenth Algorithmic Number Theory Symposium (ANTS-XV) (2022), FHE.org 2023 and 2024, ACM CCS 2022 and 2023. I am on the Editorial Board for the new IACR Communications in Cryptology journal.</p>
 </div>
 
 <div class="text">
