--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <div class="text">
 	<p><b>Pre-prints:</b></p>
   <ul>
+  	<li><a href="https://eprint.iacr.org/2024/424.pdf" target="_blank">On the Concrete Security of Approximate FHE with Noise-Flooding Countermeasures</a> - Flavio Bergamaschi, Anamaria Costache, Dana Dachman-Soled, Hunter Kippen, Lucas LaBuff and Rui Tang</li>
   	<li><a href="https://eprint.iacr.org/2023/1949.pdf" target="_blank">HELIOPOLIS: Verifiable Computation over Homomorphically Encrypted Data from Interactive Oracle Proofs is Practical</a> - Diego F. Aranha, Anamaria Costache, Antonio Guimar&atilde;es and Eduardo Soria-Vazquez</li>
 	<li><a href="https://eprint.iacr.org/2022/1408.pdf" target="_blank">BRAKE: Biometric Resilient Authenticated Key Exchange</a> - Pia Bauspieß, Tjerand Silde, Alexandre Tullot, Anamaria Costache, Christian Rathgeb, Jascha Kolberg and Christoph Busch</li>
     <li><a href="https://eprint.iacr.org/2017/163.pdf" target="_blank">Homomorphic Encryption without Gaussian Noise
@@ -58,7 +59,7 @@
 	<p>I have the pleasure to supervise or co-supervise the following PhD students.</p>
   <ul>
 	<li><a href="https://www.ntnu.no/ansatte/cristian.baeza" target="_blank">Cristian Baeza</a> (main supervisor)</li>
-	<li><a href="https://www.ntnu.no/ansatte/pia.bauspiess" target="_blank">Pia Bauspieß</a> (co-supervisor)</li>
+	<li><a href="https://www.ntnu.no/ansatte/pia.bauspiess" target="_blank">Pia Bauspieß</a> ( main supervisor)</li>
 	<li><a href="https://www.ntnu.edu/employees/lea.nurnberger" target="_blank">Lea N&uuml;rnberger</a> (main supervisor)</li>    
   </ul>
   </div>
@@ -71,11 +72,11 @@
   </div>
 
 <div class="text">
-	<p><b>Teaching: </b>I have taught <a href="https://www.ntnu.edu/studies/courses/TTM4137#tab=omEmnet" target="_blank">Wireless Network Security</a> in 2020, 2021 and 2022. In 2024, I will be teaching <a href="https://www.ntnu.edu/studies/courses/TTM4135#tab=omEmnet" target="_blank">Applied Cryptography and Network Security.</a> Please refer to the course page and Blackboard for lectures and learning materials. </p>
+	<p><b>Teaching: </b>I have taught <a href="https://www.ntnu.edu/studies/courses/TTM4137#tab=omEmnet" target="_blank">Wireless Network Security</a> in 2020, 2021 and 2022. Since 2024, I am teaching <a href="https://www.ntnu.edu/studies/courses/TTM4135#tab=omEmnet" target="_blank">Applied Cryptography and Network Security.</a> Please refer to the course page and Blackboard for lectures and learning materials. </p>
 </div>
 
 <div class="text">
-	<p><b>Chairing: </b>I was/ am program co-chair for <a href="https://www.ntnu.edu/web/nikt2021/call-for-papers-nisk"> NIKT 2019</a>, as well as for Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography 2022 and 2023 <a href="https://homomorphicencryption.org/workshops/wahc22/" target="_blank"> (WAHC)</a>.</p>
+	<p><b>Chairing: </b>I was/ am program co-chair for <a href="https://www.ntnu.edu/web/nikt2021/call-for-papers-nisk"> NIKT 2019</a>, as well as for Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography 2022, 2023 and 2024 <a href="https://homomorphicencryption.org/workshops/wahc22/" target="_blank"> (WAHC)</a>.</p>
 </div>
 
 
