--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/scotland.jpg" alt="Cuba view" style="width:380px;height:305px;" align="right"/>
 	<div id="intro">
 	<h1>Anamaria Costache </h1>
-	<p>	Hi there! I am an associate professor at NTNU. Previously, I was a part-time employee at Intel. Before that, I was a postdoc at the ISG group at RHUL, working with Martin Albrecht and Rachel Player. Before that, I worked as a Research Scientist at Intel AI Research in San Diego. I completed my PhD at Bristol University, under the supervision of Nigel Smart. I am interested in privacy-preserving machine learning, fully homomorphic encryption and more broadly, computing on encrypted data, lattice-based and post-quantum cryptography. My research is in part sponsored by Intel. You can contact me at anamaria.costache1992@gmail.com .</p>
+	<p>	Hi there! I am an associate professor at NTNU. Previously, I was a part-time employee at Intel. Before that, I was a postdoc at the ISG group at RHUL, working with Martin Albrecht and Rachel Player. Before that, I worked as a Research Scientist at Intel AI Research in San Diego. I completed my PhD at Bristol University, under the supervision of Nigel Smart. I am interested in all aspects of fully homomorphic encryption and more broadly, computing on encrypted data, privacy-preserving machine learning, lattice-based and post-quantum cryptography. My research is in part sponsored by Intel. You can contact me at anamaria.costache1992@gmail.com .</p>
 	</div>
 <div class="text"> 
  <p> I completed my undergraduate and Masters degree at Warwick University, where I studied number theory with a focus on algebraic number theory. My final year dissertation was on Brauer Groups.  	
@@ -28,8 +28,10 @@
 
 <div class="text">
 <p><b>Publications: </b></p>
-  <ul>  	
-	<li><a href="https://eprint.iacr.org/2022/162.pdf" target="_blank">On the precision loss in approximate homomorphic encryption</a> (To appear at SAC 2023) - Anamaria Costache, Benjamin R. Curtis, Erin Hales, Sean Murphy, Tabitha Ogilvie and Rachel Player</li>
+  <ul>
+  	<li><a href="https://eprint.iacr.org/2023/1949.pdf" target="_blank">HELIOPOLIS: Verifiable Computation over Homomorphically Encrypted Data from Interactive Oracle Proofs is Practical</a> (to appear at AsiaCrypt 2024) - Diego F. Aranha, Anamaria Costache, Antonio Guimar&atilde;es and Eduardo Soria-Vazquez</li>  
+  	<li><a href="https://eprint.iacr.org/2022/1408.pdf" target="_blank">BRAKE: Biometric Resilient Authenticated Key Exchange</a> (IEEE Access 2024) - Pia Bauspieß, Tjerand Silde, Alexandre Tullot, Anamaria Costache, Christian Rathgeb, Jascha Kolberg and Christoph Busch</li>	
+	<li><a href="https://eprint.iacr.org/2022/162.pdf" target="_blank">On the precision loss in approximate homomorphic encryption</a> (SAC 2023) - Anamaria Costache, Benjamin R. Curtis, Erin Hales, Sean Murphy, Tabitha Ogilvie and Rachel Player</li>
 	<li><a href="https://eprint.iacr.org/2023/104.pdf" target="_blank">Optimisations and tradeoffs for HElib</a> (CT-RSA 2023) - Anamaria Costache, Lea N&uuml;rnberger and Rachel Player</li>
 	<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-77287-1_1" target="_blank">Introduction to homomorphic encryption and schemes</a> (Protecting Privacy through Homomorphic Encryption (2022)) - Jung Hee Cheon, Anamaria Costache, Radames Cruz Moreno, Wei Dai, Nicolas Gama, Mariya Georgieva, Shai Halevi, Miran Kim, Sunwoong Kim, Kim Laine, Yuriy Polyakov and Yongsoo Song</li>
     <li><a href="https://eprint.iacr.org/2019/493.pdf" target="_blank">Evaluating the effectiveness of heuristic worst-case noise analysis in FHE</a> (European Symposium on Research in Computer Security (ESORICS) 2020) - Anamaria Costache, Kim Laine and Rachel Player</li>
@@ -45,9 +47,7 @@
 <div class="text">
 	<p><b>Pre-prints:</b></p>
   <ul>
-  	<li><a href="https://eprint.iacr.org/2024/424.pdf" target="_blank">On the Concrete Security of Approximate FHE with Noise-Flooding Countermeasures</a> - Flavio Bergamaschi, Anamaria Costache, Dana Dachman-Soled, Hunter Kippen, Lucas LaBuff and Rui Tang</li>
-  	<li><a href="https://eprint.iacr.org/2023/1949.pdf" target="_blank">HELIOPOLIS: Verifiable Computation over Homomorphically Encrypted Data from Interactive Oracle Proofs is Practical</a> - Diego F. Aranha, Anamaria Costache, Antonio Guimar&atilde;es and Eduardo Soria-Vazquez</li>
-	<li><a href="https://eprint.iacr.org/2022/1408.pdf" target="_blank">BRAKE: Biometric Resilient Authenticated Key Exchange</a> - Pia Bauspieß, Tjerand Silde, Alexandre Tullot, Anamaria Costache, Christian Rathgeb, Jascha Kolberg and Christoph Busch</li>
+  	<li><a href="https://eprint.iacr.org/2024/424.pdf" target="_blank">Revisiting the Security of Approximate FHE with Noise-Flooding Countermeasures</a> - Flavio Bergamaschi, Anamaria Costache, Dana Dachman-Soled, Hunter Kippen, Lucas LaBuff and Rui Tang</li>
     <li><a href="https://eprint.iacr.org/2017/163.pdf" target="_blank">Homomorphic Encryption without Gaussian Noise
 </a> - Anamaria Costache and Nigel P. Smart</li>
     <li><a href="https://eprint.iacr.org/2018/026.pdf" target="_blank">Zero-Knowledge Proof of Decryption for FHE Ciphertexts</a> - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
@@ -56,10 +56,10 @@
 
   <div class="text">
 	<p><b>PhD students:</b></p>
-	<p>I have the pleasure to supervise or co-supervise the following PhD students.</p>
+	<p>I had/ have the pleasure to supervise the following PhD students.</p>
   <ul>
+  	<li><a href="https://www.ntnu.no/ansatte/pia.bauspiess" target="_blank">Pia Bauspieß</a> (2021 - 2024)</li>
 	<li><a href="https://www.ntnu.no/ansatte/cristian.baeza" target="_blank">Cristian Baeza</a> (main supervisor)</li>
-	<li><a href="https://www.ntnu.no/ansatte/pia.bauspiess" target="_blank">Pia Bauspieß</a> (main supervisor)</li>
 	<li><a href="https://www.ntnu.edu/employees/lea.nurnberger" target="_blank">Lea N&uuml;rnberger</a> (main supervisor)</li>    
   </ul>
   </div>
@@ -81,7 +81,7 @@
 
 
 <div class="text">
-	<p><b>Community Service: </b>I have served as a program committee member for MathCrypt 2019 and 2021, Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography (WAHC) 2020 and 2021, the Fifteenth Algorithmic Number Theory Symposium (ANTS-XV) (2022), FHE.org 2023 and 2024, ACM CCS 2022 and 2023. I am on the Editorial Board for the new IACR Communications in Cryptology journal.</p>
+	<p><b>Community Service: </b>I have served/ will serve as a program committee member for MathCrypt 2019 and 2021, Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography (WAHC) 2020 and 2021, the Fifteenth Algorithmic Number Theory Symposium (ANTS-XV) (2022), FHE.org 2023, 2024 and 2025, ACM CCS 2022 and 2023, RWC 2025. I am on the Editorial Board for the new IACR Communications in Cryptology journal.</p>
 </div>
 
 <div class="text">
