--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <div class="text">
 	<p><b>Pre-prints:</b></p>
   <ul>
+  	<li><a href="https://eprint.iacr.org/2024/960.pdf" target="_blank">Designs for practical SHE schemes based on Ring-LWR</a> - Madalina Bolboceanu, Anamaria Costache, Erin Hales, Rachel Player, Miruna Rosca, Radu Titiu</li>
   	<li><a href="https://eprint.iacr.org/2024/424.pdf" target="_blank">Revisiting the Security of Approximate FHE with Noise-Flooding Countermeasures</a> - Flavio Bergamaschi, Anamaria Costache, Dana Dachman-Soled, Hunter Kippen, Lucas LaBuff and Rui Tang</li>
     <li><a href="https://eprint.iacr.org/2017/163.pdf" target="_blank">Homomorphic Encryption without Gaussian Noise
 </a> - Anamaria Costache and Nigel P. Smart</li>
@@ -79,9 +80,10 @@
 	<p><b>Chairing: </b>I was/ am program co-chair for <a href="https://www.ntnu.edu/web/nikt2021/call-for-papers-nisk"> NIKT 2019</a>, as well as for Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography 2022, 2023 and 2024 <a href="https://homomorphicencryption.org/workshops/wahc22/" target="_blank"> (WAHC)</a>.</p>
 </div>
 
-
 <div class="text">
-	<p><b>Community Service: </b>I have served/ will serve as a program committee member for MathCrypt 2019 and 2021, Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography (WAHC) 2020 and 2021, the Fifteenth Algorithmic Number Theory Symposium (ANTS-XV) (2022), FHE.org 2023, 2024 and 2025, ACM CCS 2022 and 2023, RWC 2025. I am on the Editorial Board for the new IACR Communications in Cryptology journal.</p>
+	<p><b>Community Service: </b></p>
+	<p>I am currently serving as a member of the <a href="https://github.com/tuneinsight/lattigo" target="blank"> Lattigo</a> Advisory committee. </p>
+	<p>I am on the Editorial Board for the new IACR Communications in Cryptology journal. I have served/ will serve as a program committee member for MathCrypt 2019 and 2021, Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography (WAHC) 2020 and 2021, the Fifteenth Algorithmic Number Theory Symposium (ANTS-XV) (2022), FHE.org 2023, 2024 and 2025, ACM CCS 2022 and 2023, RWC 2025. </p>
 </div>
 
 <div class="text">
