--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
 <div class="text">
 <p><b>Publications: </b></p>
   <ul>
-  	<li><a href="https://eprint.iacr.org/2023/1949.pdf" target="_blank">HELIOPOLIS: Verifiable Computation over Homomorphically Encrypted Data from Interactive Oracle Proofs is Practical</a> (to appear at AsiaCrypt 2024) - Diego F. Aranha, Anamaria Costache, Antonio Guimar&atilde;es and Eduardo Soria-Vazquez</li>  
+	<li><a href="https://eprint.iacr.org/2024/960.pdf" target="_blank">Designs for practical SHE schemes based on Ring-LWR</a> (Communications in Cryptology, Vol. 2, 2025, FHE.org 2024) - Madalina Bolboceanu, Anamaria Costache, Erin Hales, Rachel Player, Miruna Rosca, Radu Titiu</li>
+	<li><a href="https://eprint.iacr.org/2024/424.pdf" target="_blank">Revisiting the Security of Approximate FHE with Noise-Flooding Countermeasures</a> (to appear at PKC 2025) - Flavio Bergamaschi, Anamaria Costache, Dana Dachman-Soled, Hunter Kippen, Lucas LaBuff and Rui Tang</li>
+  	<li><a href="https://eprint.iacr.org/2023/1949.pdf" target="_blank">HELIOPOLIS: Verifiable Computation over Homomorphically Encrypted Data from Interactive Oracle Proofs is Practical</a> (AsiaCrypt 2024, FHE.org 2024) - Diego F. Aranha, Anamaria Costache, Antonio Guimar&atilde;es and Eduardo Soria-Vazquez</li>  
   	<li><a href="https://eprint.iacr.org/2022/1408.pdf" target="_blank">BRAKE: Biometric Resilient Authenticated Key Exchange</a> (IEEE Access 2024) - Pia Bauspieß, Tjerand Silde, Alexandre Tullot, Anamaria Costache, Christian Rathgeb, Jascha Kolberg and Christoph Busch</li>	
 	<li><a href="https://eprint.iacr.org/2022/162.pdf" target="_blank">On the precision loss in approximate homomorphic encryption</a> (SAC 2023) - Anamaria Costache, Benjamin R. Curtis, Erin Hales, Sean Murphy, Tabitha Ogilvie and Rachel Player</li>
-	<li><a href="https://eprint.iacr.org/2023/104.pdf" target="_blank">Optimisations and tradeoffs for HElib</a> (CT-RSA 2023) - Anamaria Costache, Lea N&uuml;rnberger and Rachel Player</li>
+	<li><a href="https://eprint.iacr.org/2023/104.pdf" target="_blank">Optimisations and tradeoffs for HElib</a> (CT-RSA 2023, FHE.org 2023) - Anamaria Costache, Lea N&uuml;rnberger and Rachel Player</li>
 	<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-77287-1_1" target="_blank">Introduction to homomorphic encryption and schemes</a> (Protecting Privacy through Homomorphic Encryption (2022)) - Jung Hee Cheon, Anamaria Costache, Radames Cruz Moreno, Wei Dai, Nicolas Gama, Mariya Georgieva, Shai Halevi, Miran Kim, Sunwoong Kim, Kim Laine, Yuriy Polyakov and Yongsoo Song</li>
     <li><a href="https://eprint.iacr.org/2019/493.pdf" target="_blank">Evaluating the effectiveness of heuristic worst-case noise analysis in FHE</a> (European Symposium on Research in Computer Security (ESORICS) 2020) - Anamaria Costache, Kim Laine and Rachel Player</li>
     <li><a href="https://eprint.iacr.org/2019/947.pdf" target="_blank">nGraph-HE2: A High-Throughput Framework for Neural Network Inference on Encrypted Data</a> (7th Workshop in Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography (2019)) - Fabian Boemer, Rosario Cammarota, Anamaria Costache and Casimir Wierzynski</li>
@@ -47,8 +49,8 @@
 <div class="text">
 	<p><b>Pre-prints:</b></p>
   <ul>
-  	<li><a href="https://eprint.iacr.org/2024/960.pdf" target="_blank">Designs for practical SHE schemes based on Ring-LWR</a> - Madalina Bolboceanu, Anamaria Costache, Erin Hales, Rachel Player, Miruna Rosca, Radu Titiu</li>
-  	<li><a href="https://eprint.iacr.org/2024/424.pdf" target="_blank">Revisiting the Security of Approximate FHE with Noise-Flooding Countermeasures</a> - Flavio Bergamaschi, Anamaria Costache, Dana Dachman-Soled, Hunter Kippen, Lucas LaBuff and Rui Tang</li>
+	<li><a href="https://eprint.iacr.org/2025/286.pdf" target="_blank">Verifiable Computation for Approximate Homomorphic Encryption Schemes (FHE.org 2025)
+	</a> - Ignacio Cascudo, Anamaria Costache, Daniele Cozzo, Dario Fiore, Antonio Guimarães, Eduardo Soria-Vazquez</li>
     <li><a href="https://eprint.iacr.org/2017/163.pdf" target="_blank">Homomorphic Encryption without Gaussian Noise
 </a> - Anamaria Costache and Nigel P. Smart</li>
     <li><a href="https://eprint.iacr.org/2018/026.pdf" target="_blank">Zero-Knowledge Proof of Decryption for FHE Ciphertexts</a> - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
@@ -60,7 +62,6 @@
 	<p>I had/ have the pleasure to supervise the following PhD students.</p>
   <ul>
   	<li><a href="https://www.ntnu.no/ansatte/pia.bauspiess" target="_blank">Pia Bauspieß</a> (2021 - 2024)</li>
-	<li><a href="https://www.ntnu.no/ansatte/cristian.baeza" target="_blank">Cristian Baeza</a> (main supervisor)</li>
 	<li><a href="https://www.ntnu.edu/employees/lea.nurnberger" target="_blank">Lea N&uuml;rnberger</a> (main supervisor)</li>    
   </ul>
   </div>
@@ -83,7 +84,7 @@
 <div class="text">
 	<p><b>Community Service: </b></p>
 	<p>I am currently serving as a member of the <a href="https://github.com/tuneinsight/lattigo" target="blank"> Lattigo</a> Advisory committee. </p>
-	<p>I am on the Editorial Board for the new IACR Communications in Cryptology journal. I have served/ will serve as a program committee member for MathCrypt 2019 and 2021, Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography (WAHC) 2020 and 2021, the Fifteenth Algorithmic Number Theory Symposium (ANTS-XV) (2022), FHE.org 2023, 2024 and 2025, ACM CCS 2022 and 2023, RWC 2025. </p>
+	<p>I am on the Editorial Board for the new IACR Communications in Cryptology journal. I have served/ will serve as a program committee member for MathCrypt 2019 and 2021, Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography (WAHC) 2020 and 2021, the Fifteenth Algorithmic Number Theory Symposium (ANTS-XV) (2022), FHE.org 2023, 2024 and 2025, ACM CCS 2022 and 2023, RWC 2025, LatinCrypt 2025. </p>
 </div>
 
 <div class="text">
