--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <div class="text">
 	<p><b>Community Service: </b></p>
 	<p>I am currently serving as a member of the <a href="https://github.com/tuneinsight/lattigo" target="blank"> Lattigo</a> Advisory committee. </p>
-	<p>I am on the Editorial Board for the new IACR Communications in Cryptology journal. I have served/ will serve as a program committee member for MathCrypt 2019 and 2021, Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography (WAHC) 2020 and 2021, the Fifteenth Algorithmic Number Theory Symposium (ANTS-XV) (2022), FHE.org 2023, 2024 and 2025, ACM CCS 2022 and 2023, RWC 2025, LatinCrypt 2025. </p>
+	<p>I was on the Editorial Board for the new IACR Communications in Cryptology journal in 2024. I have served/ will serve as a program committee member for MathCrypt 2019 and 2021, Workshop on Encrypted Computing &amp; Applied Homomorphic Cryptography (WAHC) 2020 and 2021, the Fifteenth Algorithmic Number Theory Symposium (ANTS-XV) (2022), FHE.org 2023, 2024 and 2025, ACM CCS 2022 and 2023, RWC 2025, LatinCrypt 2025. </p>
 </div>
 
 <div class="text">
