--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="text">
 <p><b>Publications: </b></p>
   <ul>
-	<li><a href="https://eprint.iacr.org/2024/960.pdf" target="_blank">Designs for practical SHE schemes based on Ring-LWR</a> (Communications in Cryptology, Vol. 2, 2025, FHE.org 2024) - Madalina Bolboceanu, Anamaria Costache, Erin Hales, Rachel Player, Miruna Rosca, Radu Titiu</li>
+	<li><a href="https://eprint.iacr.org/2024/960.pdf" target="_blank">Designs for practical SHE schemes based on Ring-LWR</a> (Communications in Cryptology, Vol. 2, 2025, FHE.org 2024) - Madalina Bolboceanu, Anamaria Costache, Erin Hales, Rachel Player, Miruna Rosca and Radu Titiu</li>
 	<li><a href="https://eprint.iacr.org/2024/424.pdf" target="_blank">Revisiting the Security of Approximate FHE with Noise-Flooding Countermeasures</a> (to appear at PKC 2025) - Flavio Bergamaschi, Anamaria Costache, Dana Dachman-Soled, Hunter Kippen, Lucas LaBuff and Rui Tang</li>
   	<li><a href="https://eprint.iacr.org/2023/1949.pdf" target="_blank">HELIOPOLIS: Verifiable Computation over Homomorphically Encrypted Data from Interactive Oracle Proofs is Practical</a> (AsiaCrypt 2024, FHE.org 2024) - Diego F. Aranha, Anamaria Costache, Antonio Guimar&atilde;es and Eduardo Soria-Vazquez</li>  
   	<li><a href="https://eprint.iacr.org/2022/1408.pdf" target="_blank">BRAKE: Biometric Resilient Authenticated Key Exchange</a> (IEEE Access 2024) - Pia Bauspieß, Tjerand Silde, Alexandre Tullot, Anamaria Costache, Christian Rathgeb, Jascha Kolberg and Christoph Busch</li>	
@@ -42,15 +42,17 @@
     <li><a href="https://www.di.ens.fr/~minelli/docs/Barnett_etal.pdf" target="_blank">Processing Encrypted Data Using Homomorphic Encryption</a> (Data Mining with Secure Computation, SODA project 2017) - Anthony Barnett, Charlotte Bonte, Carl Bootland, Joppe W. Bos, Wouter Castryck,  Anamaria Costache, Louis Goubin, Ilia Iliashenko, Tancr&egrave;de Lepoint, Michele Minelli, Pascal Paillier, Nigel P. Smart, Frederik Vercauteren, Srinivas Vivek and Adrian Waller</li>
     <li><a href="https://eprint.iacr.org/2016/1019.pdf" target="_blank">Faster Homomorphic Evaluation of Discrete Fourier Transforms</a> (FC 2017) - Anamaria Costache, Nigel P. Smart and Srinivas Vivek</li>
     <li><a href="https://eprint.iacr.org/2016/250.pdf" target="_blank">Fixed Point Arithmetic in SHE Schemes</a> (SAC 2016) - Anamaria Costache, Nigel P. Smart, Srinivas Vivek and Adrian Waller</li>
-    <li><a href="https://eprint.iacr.org/2015/889.pdf" target="_blank">Which Somewhat Homomorphic Encryption Scheme is Best?</a> (CT-RSA 2016) - Anamaria Costache, Nigel P. Smart</li> 
+    <li><a href="https://eprint.iacr.org/2015/889.pdf" target="_blank">Which Somewhat Homomorphic Encryption Scheme is Best?</a> (CT-RSA 2016) - Anamaria Costache and Nigel P. Smart</li> 
   </ul>
   </div>
 
 <div class="text">
 	<p><b>Pre-prints:</b></p>
   <ul>
+	<li><a href="https://eprint.iacr.org/2025/286.pdf" target="_blank">Improved Rényi Arguments for Lattice-Based Threshold Encryption
+	</a> - Katharina Boudgoust and Anamaria Costache</li>
 	<li><a href="https://eprint.iacr.org/2025/286.pdf" target="_blank">Verifiable Computation for Approximate Homomorphic Encryption Schemes (FHE.org 2025)
-	</a> - Ignacio Cascudo, Anamaria Costache, Daniele Cozzo, Dario Fiore, Antonio Guimarães, Eduardo Soria-Vazquez</li>
+	</a> - Ignacio Cascudo, Anamaria Costache, Daniele Cozzo, Dario Fiore, Antonio Guimarães and Eduardo Soria-Vazquez</li>
     <li><a href="https://eprint.iacr.org/2017/163.pdf" target="_blank">Homomorphic Encryption without Gaussian Noise
 </a> - Anamaria Costache and Nigel P. Smart</li>
     <li><a href="https://eprint.iacr.org/2018/026.pdf" target="_blank">Zero-Knowledge Proof of Decryption for FHE Ciphertexts</a> - Christopher Carr, Anamaria Costache, Gareth T. Davies, Kristian Gjøsteen and Martin Strand</li>
